k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ${KUBE_NAMESPACE}
  namespace: ${KUBE_NAMESPACE}
