k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${BACKEND_APP}-deployment
  namespace: ${KUBE_NAMESPACE}
spec:
  replicas: ${APP_NODES}
  selector:
    matchLabels:
      app: ${BACKEND_APP}
  template:
    metadata:
      labels:
        app: ${BACKEND_APP}
    spec:
      containers:
      - name: ${DC_PREFIX}
        image: ${DOCKER_USERNAME}/${BACKEND_APP}:${BACKEND_APP_VERSION}
        ports:
        - containerPort: ${BACKEND_PORT}
        volumeMounts:
          - name: proofs
            mountPath: /${BACKEND_APP}/data/proofs
          - name: jobs
            mountPath:  /${BACKEND_APP}/data/jobs
      volumes:
        - name: proofs
          persistentVolumeClaim:
            claimName: proofs
        - name: jobs
          persistentVolumeClaim:
            claimName: jobs
---
apiVersion: v1
kind: Service
metadata:
  name: ${BACKEND_APP}-svc
  namespace: ${KUBE_NAMESPACE}
spec:
  ports:
  - port: ${BACKEND_PORT}
    targetPort: ${BACKEND_PORT}
    protocol: TCP
    name: http
  selector:
    app: ${BACKEND_APP}
