k8s/elasticsearch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: elasticsearch-deployment
  namespace: ${KUBE_NAMESPACE}
spec:
  selector:
    matchLabels:
      app: elasticsearch
  template:
    metadata:
      labels:
        app: elasticsearch
    spec:
      containers:
        - name: elasticsearch
          image: docker.elastic.co/elasticsearch/elasticsearch:${ES_VERSION}
          ports:
          - containerPort: ${ES_PORT}
          resources:
            requests:
              memory: ${ES_MEM_KUBE}
          volumeMounts:
          - name: elasticsearch-data
            mountPath: /usr/share/elasticsearch/data
      volumes:
        - name: elasticsearch-data
          persistentVolumeClaim:
            claimName: elasticsearch-data
---
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch
  namespace: ${KUBE_NAMESPACE}
spec:
  ports:
  - port: ${ES_PORT}
    targetPort: ${ES_PORT}
    protocol: TCP
    name: http
  selector:
    app: elasticsearch
