k8s/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${APP}-deployment
  namespace: ${KUBE_NAMESPACE}
spec:
  replicas: ${APP_NODES}
  selector:
    matchLabels:
      app: ${APP}
  template:
    metadata:
      labels:
        app: ${APP}
    spec:
      containers:
      - name: ${DC_PREFIX}
        image: ${DOCKER_USERNAME}/${DC_PREFIX}:${APP_VERSION}
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: ${APP}-svc
  namespace: ${KUBE_NAMESPACE}
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: ui
  selector:
    app: ${APP}
