k8s/nfs.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nfs-server
  namespace: ${KUBE_NAMESPACE}
spec:
  selector:
    matchLabels:
      app: nfs-server
  template:
    metadata:
      labels:
        app: nfs-server
    spec:
      containers:
      - name: nfs-server
        image: ghcr.io/openebs/nfs-server-alpine:ci
        ports:
        - name: nfs
          containerPort: 2049
        - name: mountd
          containerPort: 20048
        - name: rpcbind
          containerPort: 111
        securityContext:
          capabilities:
            add: ["SYS_ADMIN", "SETPCAP"]
        lifecycle:
          postStart:
            exec:
              command: ["/bin/sh", "-c", "mkdir /nfsshare/jobs /nfsshare/proofs"]
        volumeMounts:
        - name: nfs-storage
          mountPath: /nfsshare
      volumes:
        - name: nfs-storage
          persistentVolumeClaim:
            claimName: nfs-storage
---
apiVersion: v1
kind: Service
metadata:
  name: nfs-service
  namespace: ${KUBE_NAMESPACE}
spec:
  ports:
  - name: nfs
    port: 2049
  - name: mountd
    port: 20048
  - name: rpcbind
    port: 111
  selector:
    app: nfs-server
